--- a/resources/assets/sass/_module.scss
+++ b/resources/assets/sass/_module.scss
@@ -7,6 +7,15 @@
   text-align: center;
 }
 
+.banniere3{
+  height:400px;
+  padding-top: 150px;
+  background-color: $brand-success;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+}
+
 .wraper{
   padding: 10px 5px 10px 5px;
 
