--- a/resources/assets/sass/_module.scss
+++ b/resources/assets/sass/_module.scss
@@ -29,26 +29,25 @@
 
   .item{
     padding-top: 5px;
-    background-color: $brand-warning;
+    background-color: lighten($brand-danger,20%);
     font-weight: bold;
     color: white;
     &:hover{
-      background-color: darken($brand-warning,20%);
+      background-color: $brand-danger;
     }
   }
 }
 
 
 .solution{
-
-
   .item{
     height: 80px;
   }
 }
 
 .contact{
-  border:solid 1px lighten($text-color,40%);
+  border-top:solid 1px lighten($text-color,40%);
+  border-bottom:solid 1px lighten($text-color,40%);
 }
 
 .menu{
@@ -57,7 +56,7 @@
 
 .logo{
   padding-top: 12px;
-  background-color: $brand-danger;
+  background-color: lighten($brand-danger,20%);
   text-align: center;
   font-weight: bold;
   color: white;
@@ -77,7 +76,7 @@
   }
 }
 .content{
-  border:solid 1px lighten($text-color,20%);
+  border-top:solid 1px lighten($text-color,20%);
 }
 
 .photo_w{
