--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,11 +1,13 @@
 
-// Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+
 
 // Variables
 @import "variables";
 @import "mix";
 @import "module";
+@import "module/solution/solution1";
+@import "module/contenue/contenue";
+@import "font";
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
