--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,100,100i,400,700,900);@charset "UTF-8";
 
 .border {
   border: solid 1px red;
@@ -8532,5 +8532,36 @@ button.close {
   .hidden-print {
     display: none !important;
   }
+}
+
+body {
+  font-family: 'Roboto',serif;
+  font-weight: 300;
+}
+
+.text {
+  font-family: 'Roboto', sans-serif;
+  color: #000;
+}
+
+.text-100 {
+  font-weight: 100;
+}
+
+.text-100i {
+  font-weight: 100;
+  font-style: italic;
+}
+
+.text-400 {
+  font-weight: 400;
+}
+
+.text-700 {
+  font-weight: 700;
+}
+
+.text-900 {
+  font-weight: 900;
 }
 
