--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,8 @@
 
 
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,100,100i,400,700,900');
+
+
 
 // Variables
 @import "variables";
@@ -11,3 +14,28 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+body{
+  font-family: 'Roboto',serif;
+  font-weight: 300;
+}
+
+.text  {
+  font-family: 'Roboto', sans-serif;
+  color: #000;
+}
+.text-100 {
+  font-weight: 100;
+}
+.text-100i {
+  font-weight: 100;
+  font-style: italic;
+}
+.text-400 {
+  font-weight: 400;
+}
+.text-700 {
+  font-weight: 700;
+}
+.text-900 {
+   font-weight: 900;
+ }
