--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,6 +22,14 @@ body{
   font-family: 'Roboto',serif;
   font-weight: 300;
 }
+a{
+  font-family: Roboto,sans-serif;
+  font-weight: 700;
+  border-bottom: dashed 1px lighten($euro,15%);
+  &:hover{
+    border-bottom: none;
+  }
+}
 
 .text-logo{
 
