--- a/resources/assets/sass/module/banniere/_banniere.scss
+++ b/resources/assets/sass/module/banniere/_banniere.scss
@@ -1,6 +1,17 @@
 .wrapper-baniere{
+  text-align: center;
+  height: 400px; /*or 70%, or what you want*/
   img {
-    max-width: 100%;
-    height: auto;
+
+    width: auto;
+    max-width: 1900px;
+    max-height: 400px;
+  }
+  .container-imgs{
+    border:solid 1px red;
+    height: 400px;
+    width:  100%; /*or 70%, or what you want*/
+    background-position: center;
+    background-repeat: no-repeat;
   }
 }
