--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,6 +2,7 @@
 // Body
 $body-bg: #f5f8fa;
 $euro:#637cbb;
+.borderr{border:solid 1px red;}
 
 // Borders
 $laravel-border-color: darken($body-bg, 10%);
