--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,6 +15,7 @@
 @import "module/logo/logo";
 @import "module/contact/contact";
 @import "module/menu/menu";
+@import "module/search/search";
 @import "font";
 
 // Bootstrap
