--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3308,6 +3308,8 @@ input[type="text"].search_euro {
 }
 
 .positionBar {
+  -webkit-box-shadow: 0px 5px 4px 0px rgba(212, 226, 235, 0.69);
+  box-shadow: 0px 5px 4px 0px rgba(212, 226, 235, 0.69);
   background-color: white;
   border: solid 2px #D4E2EB;
   width: 100%;
