--- a/resources/assets/sass/module/search/_search.scss
+++ b/resources/assets/sass/module/search/_search.scss
@@ -21,6 +21,9 @@ input[type="text"]{
 
 .positionBar
 {
+  -webkit-box-shadow: 0px 5px 4px 0px rgba(212, 226, 235, 0.69);
+  -moz-box-shadow:    0px 5px 4px 0px rgba(212, 226, 235, 0.69);
+  box-shadow:         0px 5px 4px 0px rgba(212, 226, 235, 0.69);
   //-moz-box-shadow: 1px 1px 10px 1px #cfcfcf;
   //-webkit-box-shadow: 1px 1px 10px 1px #cfcfcf;
   //-o-box-shadow: 1px 1px 10px 1px #cfcfcf;
